[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scenes/screens/CombatScreen.gd" id="1"]
[ext_resource type="Script" path="res://scripts/render/GridRenderer.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/SelectedUnitPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/TileInfoPanel.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/ForecastPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/CommandMenu.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/ui/TutorialPopup.tscn" id="7"]

[node name="CombatScreen" type="Node2D"]
script = ExtResource("1")

[node name="GridRenderer" type="Node2D" parent="."]
script = ExtResource("2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SelectedUnitPanel" parent="CanvasLayer" instance=ExtResource("3")]

[node name="TileInfoPanel" parent="CanvasLayer" instance=ExtResource("4")]

[node name="ForecastPanel" parent="CanvasLayer" instance=ExtResource("5")]

[node name="CommandMenu" parent="CanvasLayer" instance=ExtResource("6")]

[node name="TutorialPopup" parent="CanvasLayer" instance=ExtResource("7")]
